corrigindo os links das imagens

--- a/html/produto.html
+++ b/html/produto.html
@@ -46,7 +46,7 @@
         </div>
         <section id="descricaoMain">
                 <div id="imagemproduto">
-                    <img src="./imagens/imagemkitkat.jpg" alt="produtoExemplo">
+                    <img src="/imagens/Produtos-Japao/kitkat-japao.jpg" alt="produtoExemplo">
                 </div>
                 <div id="descricaoProduto">
                     <div id="nomeDoProduto">
@@ -159,7 +159,7 @@
         <section id="talvezinteresse">
             <div>
                 <section>
-                    <img src="./imagens/saque-yamadanishiki.jpg" alt="imagemsaque" width="300px">
+                    <img src="/imagens/Produtos-Franca/saque-yamadanishiki.jpg" alt="imagemsaque" width="300px">
                 </section>
                 <div class="descricaovalor">
                     <span>Saquê Yamadanishiki Honjozo Amayagi - 500ml</span>
@@ -168,7 +168,7 @@
             </div>
             <div>
                 <section >
-                    <img src="./imagens/curry-vermont.jpg" alt="imagemdocejapones" width="300px">
+                    <img src="/imagens/Produtos-Coreia/curry-vermont.jpg" alt="imagemdocejapones" width="300px">
                 </section>
                 <div class="descricaovalor">
                     <span>Curry Vermont 3L Karakuchi Hot - House 230g</span>
@@ -177,7 +177,7 @@
             </div>
             <div>
                 <section > 
-                    <img src="./imagens/arroz-japonês.png" alt="imagemarrozjapones" width="300px">
+                    <img src="/imagens/Produtos-Japao/arroz-japonês.png" alt="imagemarrozjapones" width="300px">
                 </section>
                 <div class="descricaovalor">
                     <span>Arroz Japonês Grão Curto Tipo 1 - Hibari 5kg</span>
@@ -186,7 +186,7 @@
             </div>
             <div>
                 <section >
-                    <img src="./imagens/Macarrão Instantâneo Lamen Yakisoba Noodle 5p - Sunaoshi 410g.jpg" alt="imagemmacarraoinstantaneo" width="220px">
+                    <img src="/imagens/Produtos-Japao/Macarrão Instantâneo Lamen Yakisoba Noodle 5p - Sunaoshi 410g.jpg" alt="imagemmacarraoinstantaneo" width="220px">
                 </section>
                 <div class="descricaovalor">
                     <span>Macarrão Instantâneo Lamen Yakisoba Noodle 5p - Sunaoshi 410g</span>
