--- a/html/listagem-de-produtos.html
+++ b/html/listagem-de-produtos.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sabores do Mundo</title>
     <link rel="icon" href="/imagens/sabor-icon.png">
-    <link rel="stylesheet" href="/css/listagem-de-produtos.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/listagem-de-produtos.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans&display=swap">
 </head>
 
